fix spacing on ISPP

--- a/cookingstyle.css
+++ b/cookingstyle.css
@@ -18,15 +18,15 @@ div.wb {
 
 .column {
   float: left;
-  width: 30%;
+  width: 27%;
   background: rgb(255, 0, 0);
   font-size: 14px;
   border-radius: 15px;
   padding: 12px;
   height: 300px;
-  margin-left: 13px;
-  margin-right: 10px;
-  margin-top: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 1%;
 }
 
 .img-main {
@@ -44,10 +44,9 @@ div.wb {
 @media screen and (max-width: 600px) {
 		.column {
 		width: 100%;
-		
+    }
 		.img-main {
 		width:100%
-		}
 		}
 }
 
